--- a/ui/clearing/_clearing.sass
+++ b/ui/clearing/_clearing.sass
@@ -1,6 +1,6 @@
-/* Clearing –––––––––––––––––––––––––––––––––––––––––––––––––– */
+// Clearing --------------------------------------------------------------------
 
-/* Self Clearing Goodness */
+// Self Clearing Goodness
 .container:after,
 .row:after,
 .u-cf
