--- a/ui/links/_links.sass
+++ b/ui/links/_links.sass
@@ -1,5 +1,5 @@
-/* Links –––––––––––––––––––––––––––––––––––––––––––––––––– */
+// Links -----------------------------------------------------------------------
 a
-    color: #1EAEDB 
+    color: $link-color
 a:hover
-    color: #0FA0CE 
+    color: $link-color-darken
