--- a/ui/spacing/_spacing.sass
+++ b/ui/spacing/_spacing.sass
@@ -1,4 +1,4 @@
-/* Spacing –––––––––––––––––––––––––––––––––––––––––––––––––– */
+// Spacing ---------------------------------------------------------------------
 button,
 .button
     margin-bottom: 1rem
@@ -16,4 +16,4 @@ p,
 ul,
 ol,
 form
-    margin-bottom: 2.5rem 
+    margin-bottom: 2.5rem
