--- a/ui/utilities/_utilities.sass
+++ b/ui/utilities/_utilities.sass
@@ -1,4 +1,4 @@
-/* Utilities –––––––––––––––––––––––––––––––––––––––––––––––––– */
+// Utilities -------------------------------------------------------------------
 .u-full-width
     width: 100%
     box-sizing: border-box
@@ -8,4 +8,4 @@
 .u-pull-right
     float: right
 .u-pull-left
-    float: left 
+    float: left
