--- a/ui/_ui.sass
+++ b/ui/_ui.sass
@@ -1,3 +1,4 @@
+// Complete UI -----------------------------------------------------------------
 @import "grid/_grid"
 @import "base/_base"
 @import "typography/_typography"
