--- a/ui/base/_base.sass
+++ b/ui/base/_base.sass
@@ -1,11 +1,12 @@
-/* Base Styles –––––––––––––––––––––––––––––––––––––––––––––––––– */
-/* NOTE html is set to 62.5% so that all the REM measurements throughout Skeleton are based on 10px sizing. So basically 1.5rem = 15px :) */
+// Base Styles -----------------------------------------------------------------
+// NOTE html is set to 62.5% so that all the REM measurements throughout
+// Skeleton are based on 10px sizing. So basically 1.5rem = 15px :)
 html
-    font-size: 62.5% 
+    font-size: 62.5%
 body
-    /* currently ems cause chrome bug misinterpreting rems on body element */
+    // currently ems cause chrome bug misinterpreting rems on body element
     font-size: 1.5em
     line-height: 1.6
     font-weight: 400
     font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif
-    color: #222
+    color: $font-color-dark
