--- a/ui/buttons/_buttons.sass
+++ b/ui/buttons/_buttons.sass
@@ -1,4 +1,4 @@
-/* Buttons –––––––––––––––––––––––––––––––––––––––––––––––––– */
+// Buttons ---------------------------------------------------------------------
 .button,
 button,
 input[type="submit"],
@@ -7,7 +7,7 @@ input[type="button"]
     display: inline-block
     height: 38px
     padding: 0 30px
-    color: #555
+    color: $font-color-light
     text-align: center
     font-size: 11px
     font-weight: 600
@@ -17,8 +17,8 @@ input[type="button"]
     text-decoration: none
     white-space: nowrap
     background-color: transparent
-    border-radius: 4px
-    border: 1px solid #bbb
+    border-radius: $border-radius
+    border: 1px solid $border-color-light
     cursor: pointer
     box-sizing: border-box
 .button:hover,
@@ -31,8 +31,8 @@ button:focus,
 input[type="submit"]:focus,
 input[type="reset"]:focus,
 input[type="button"]:focus
-    color: #333
-    border-color: #888
+    color: $font-color
+    border-color: $border-color
     outline: 0
 .button.button-primary,
 button.button-primary,
@@ -40,8 +40,8 @@ input[type="submit"].button-primary,
 input[type="reset"].button-primary,
 input[type="button"].button-primary
     color: #FFF
-    background-color: #33C3F0
-    border-color: #33C3F0
+    background-color: $primary-color
+    border-color: $primary-color
 .button.button-primary:hover,
 button.button-primary:hover,
 input[type="submit"].button-primary:hover,
@@ -53,5 +53,5 @@ input[type="submit"].button-primary:focus,
 input[type="reset"].button-primary:focus,
 input[type="button"].button-primary:focus
     color: #FFF
-    background-color: #1EAEDB
-    border-color: #1EAEDB
+    background-color: $link-color
+    border-color: $link-color
