--- a/ui/code/_code.sass
+++ b/ui/code/_code.sass
@@ -1,13 +1,13 @@
-/* Code –––––––––––––––––––––––––––––––––––––––––––––––––– */
+// Code ------------------------------------------------------------------------
 code
     padding: .2rem .5rem
     margin: 0 .2rem
     font-size: 90%
     white-space: nowrap
-    background: #F1F1F1
-    border: 1px solid #E1E1E1
-    border-radius: 4px
+    background: $code-bg
+    border: 1px solid $code-border
+    border-radius: $border-radius
 pre > code
     display: block
     padding: 1rem 1.5rem
-    white-space: pre 
+    white-space: pre
