--- a/ui/forms/_forms.sass
+++ b/ui/forms/_forms.sass
@@ -1,4 +1,4 @@
-/* Forms –––––––––––––––––––––––––––––––––––––––––––––––––– */
+// Forms -----------------------------------------------------------------------
 input[type="email"],
 input[type="number"],
 input[type="search"],
@@ -9,14 +9,14 @@ input[type="password"],
 textarea,
 select
     height: 38px
-    /* The 6px vertically centers text on FF, ignored by Webkit */
+    // The 6px vertically centers text on FF, ignored by Webkit
     padding: 6px 10px
     background-color: #fff
-    border: 1px solid #D1D1D1
-    border-radius: 4px
+    border: 1px solid $form-border
+    border-radius: $border-radius
     box-shadow: none
     box-sizing: border-box
-/* Removes awkward default styles on some inputs for iOS */
+// Removes awkward default styles on some inputs for iOS
 input[type="email"],
 input[type="number"],
 input[type="search"],
@@ -41,7 +41,7 @@ input[type="url"]:focus,
 input[type="password"]:focus,
 textarea:focus,
 select:focus
-    border: 1px solid #33C3F0
+    border: 1px solid $primary-color
     outline: 0
 label,
 legend
