--- a/ui/grid/_grid.sass
+++ b/ui/grid/_grid.sass
@@ -1,4 +1,4 @@
-/* Grid –––––––––––––––––––––––––––––––––––––––––––––––––– */
+// Grid ------------------------------------------------------------------------
 .container
     position: relative
     width: 100%
@@ -12,14 +12,14 @@
     float: left
     box-sizing: border-box
 
-/* For devices larger than 400px */
+// For devices larger than 400px
 @media (min-width: 400px)
     .container
         width: 85%
         padding: 0
 
 
-/* For devices larger than 550px */
+// For devices larger than 550px
 @media (min-width: 550px)
     .container
         width: 80%
@@ -29,7 +29,7 @@
     .column:first-child,
     .columns:first-child
         margin-left: 0
-    
+
     .one.column,
     .one.columns
         width: 4.66666666667%
@@ -56,15 +56,15 @@
     .twelve.columns
         width: 100%
         margin-left: 0
-    
+
     .one-third.column
         width: 30.6666666667%
     .two-thirds.column
         width: 65.3333333333%
-    
+
     .one-half.column
         width: 48%
-    
+
     /* Offsets */
     .offset-by-one.column,
     .offset-by-one.columns
@@ -99,15 +99,14 @@
     .offset-by-eleven.column,
     .offset-by-eleven.columns
         margin-left: 95.3333333333%
-    
+
     .offset-by-one-third.column,
     .offset-by-one-third.columns
         margin-left: 34.6666666667%
     .offset-by-two-thirds.column,
     .offset-by-two-thirds.columns
         margin-left: 69.3333333333%
-    
+
     .offset-by-one-half.column,
     .offset-by-one-half.columns
         margin-left: 52%
-    
