--- a/ui/lists/_lists.sass
+++ b/ui/lists/_lists.sass
@@ -1,4 +1,4 @@
-/* Lists –––––––––––––––––––––––––––––––––––––––––––––––––– */
+// Lists -----------------------------------------------------------------------
 ul
     list-style: circle inside
 ol
@@ -13,4 +13,4 @@ ol ul
     margin: 1.5rem 0 1.5rem 3rem
     font-size: 90%
 li
-    margin-bottom: 1rem 
+    margin-bottom: 1rem
