--- a/ui/tables/_tables.sass
+++ b/ui/tables/_tables.sass
@@ -1,9 +1,9 @@
-/* Tables –––––––––––––––––––––––––––––––––––––––––––––––––– */
+// Tables ----------------------------------------------------------------------
 th,
 td
     padding: 12px 15px
     text-align: left
-    border-bottom: 1px solid #E1E1E1
+    border-bottom: 1px solid $code-border
 th:first-child,
 td:first-child
     padding-left: 0
