removed textarea paddings because they were useless

--- a/ui/buttons/_buttons.sass
+++ b/ui/buttons/_buttons.sass
@@ -5,14 +5,14 @@ input[type="submit"],
 input[type="reset"],
 input[type="button"]
     display: inline-block
-    height: 38px
-    padding: 0 30px
+    height: $button-height
+    padding: $button-padding
     color: $font-color-light
     text-align: center
-    font-size: 11px
-    font-weight: 600
-    line-height: 38px
-    letter-spacing: .1rem
+    font-size: $button-font-size
+    font-weight: $button-font-weight
+    line-height: $button-height
+    letter-spacing: $button-letter-spacing
     text-transform: uppercase
     text-decoration: none
     white-space: nowrap
