--- a/ui/code/_code.sass
+++ b/ui/code/_code.sass
@@ -1,13 +1,13 @@
 // Code ------------------------------------------------------------------------
 code
-    padding: .2rem .5rem
-    margin: 0 .2rem
-    font-size: 90%
+    padding: $code-padding
+    margin: $code-margin
+    font-size: $code-font-size
     white-space: nowrap
     background: $code-bg
     border: 1px solid $code-border
     border-radius: $border-radius
 pre > code
     display: block
-    padding: 1rem 1.5rem
+    padding: $pre-code-margin
     white-space: pre
