--- a/_variables.sass
+++ b/_variables.sass
@@ -2,7 +2,6 @@
 $primary-color: #33C3F0
 $link-color: #1EAEDB
 $link-color-darken: #0FA0CE
-// $secondary-color: orange
 $font-color-dark: #222
 $font-color: #333
 $font-color-light: #555
@@ -14,24 +13,56 @@ $border-color-light: #bbb
 $code-border: #E1E1E1
 $form-border: #D1D1D1
 
+// Typography ------------------------------------------------------------------
+@import "https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900"
+
+$font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif
+
+$font-size: 1.5em
+$line-height: 1.6
+$font-weight: 400
+
+$font-weight-h: 300
+
+$font-size-h1: 4.0rem
+$font-size-h2: 3.6rem
+$font-size-h3: 3.0rem
+$font-size-h4: 2.4rem
+$font-size-h5: 1.8rem
+$font-size-h6: 1.5rem
+
+$line-height-h1: 1.2
+$line-height-h2: 1.25
+$line-height-h3: 1.3
+$line-height-h4: 1.35
+$line-height-h5: 1.5
+$line-height-h6: 1.6
+
+$letter-spacing-h1: -.1rem
+$letter-spacing-h2: -.1rem
+$letter-spacing-h3: -.1rem
+$letter-spacing-h4: -.08rem
+$letter-spacing-h5: -.05rem
+$letter-spacing-h6: 0
+
+// Buttons ---------------------------------------------------------------------
+$button-height: 38px
+$button-padding: 0 30px
+$button-font-size: 1.1rem
+$button-font-weight: 600
+$button-letter-spacing: 0.1rem
+
+// Code ------------------------------------------------------------------------
+$code-height: 38px
+$code-padding: .2rem .5rem
+$code-margin: 0 .2rem
+$code-font-size: 90%
+$pre-code-margin: 1rem 1.5rem
+
+// Code ------------------------------------------------------------------------
+$form-height: 38px
+$form-padding: 6px 10px
+$textarea-height: 65px
+
 // Misc ------------------------------------------------------------------------
 $border-radius: 4px
-
-// Font ------------------------------------------------------------------------
-$font-family: "Source Sans Pro", "Open Sans", "Helvetica Neue", "Lucida Grande", Arial, Verdana, sans-serif
-$font-family-title: "Montserrat", "Source Sans Pro", "Open Sans", "Helvetica Neue", "Lucida Grande", Arial, Verdana, sans-serif
-
-$font-size-biggest: 27px
-$font-size-big: 25px
-$font-size-medium: 17px
-$font-size: 14px
-$font-size-small: 13px
-$font-size-smaller: 12px
-$font-size-smallest: 11px
-
-$font-color: #555F61
-
-$letter-spacing: 0.05em
-$letter-spacing-large: 0.1em
-$line-height-double: 2
-$line-height-single: 1
