--- a/ui/base/_base.sass
+++ b/ui/base/_base.sass
@@ -5,8 +5,8 @@ html
     font-size: 62.5%
 body
     // currently ems cause chrome bug misinterpreting rems on body element
-    font-size: 1.5em
-    line-height: 1.6
-    font-weight: 400
-    font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif
+    font-size: $font-size
+    line-height: $line-height
+    font-weight: $font-weight
+    font-family: $font-family
     color: $font-color-dark
