--- a/ui/typography/_typography.sass
+++ b/ui/typography/_typography.sass
@@ -2,31 +2,31 @@
 h1, h2, h3, h4, h5, h6
     margin-top: 0
     margin-bottom: 2rem
-    font-weight: 300
+    font-weight: $font-weight-h
 h1
-    font-size: 4.0rem
-    line-height: 1.2
-    letter-spacing: -.1rem
+    font-size: $font-size-h1
+    line-height: $line-height-h1
+    letter-spacing: $letter-spacing-h1
 h2
-    font-size: 3.6rem
-    line-height: 1.25
-    letter-spacing: -.1rem
+    font-size: $font-size-h2
+    line-height: $line-height-h2
+    letter-spacing: $letter-spacing-h2
 h3
-    font-size: 3.0rem
-    line-height: 1.3
-    letter-spacing: -.1rem
+    font-size: $font-size-h3
+    line-height: $line-height-h3
+    letter-spacing: $letter-spacing-h3
 h4
-    font-size: 2.4rem
-    line-height: 1.35
-    letter-spacing: -.08rem
+    font-size: $font-size-h4
+    line-height: $line-height-h4
+    letter-spacing: $letter-spacing-h4
 h5
-    font-size: 1.8rem
-    line-height: 1.5
-    letter-spacing: -.05rem
+    font-size: $font-size-h5
+    line-height: $line-height-h5
+    letter-spacing: $letter-spacing-h5
 h6
-    font-size: 1.5rem
-    line-height: 1.6
-    letter-spacing: 0
+    font-size: $font-size-h6
+    line-height: $line-height-h6
+    letter-spacing: $letter-spacing-h6
 
 /* Larger than phablet */
 @media (min-width: 550px)
