--- a/sass/ui/code/_code.sass
+++ b/sass/ui/code/_code.sass
@@ -4,10 +4,10 @@ code
     margin: $code-margin
     font-size: $code-font-size
     white-space: nowrap
-    background: $code-bg
-    border: 1px solid $code-border
+    background: $background-color
+    border: $border-style $border-color
     border-radius: $border-radius
 pre > code
     display: block
-    padding: $pre-code-margin
+    padding: $pre-code-padding
     white-space: pre
