--- a/sass/ui/links/_links.sass
+++ b/sass/ui/links/_links.sass
@@ -1,5 +1,5 @@
 // Links -----------------------------------------------------------------------
 a
-    color: $link-color
+    color: $primary-color
 a:hover
-    color: $link-color-darken
+    color: $primary-color-hover
