--- a/sass/ui/lists/_lists.sass
+++ b/sass/ui/lists/_lists.sass
@@ -10,7 +10,7 @@ ul ul,
 ul ol,
 ol ol,
 ol ul
-    margin: 1.5rem 0 1.5rem 3rem
-    font-size: 90%
+    margin: $nested-list-margin
+    font-size: $nested-list-font-size
 li
-    margin-bottom: 1rem
+    margin: $li-margin
