--- a/sass/ui/misc/_misc.sass
+++ b/sass/ui/misc/_misc.sass
@@ -1,6 +1,5 @@
 // Misc ------------------------------------------------------------------------
 hr
-    margin-top: 3rem
-    margin-bottom: 3.5rem
+    margin: $hr-margin
     border-width: 0
-    border-top: 1px solid $code-border
+    border-top: $border-style $border-color
