--- a/sass/ui/spacing/_spacing.sass
+++ b/sass/ui/spacing/_spacing.sass
@@ -1,12 +1,12 @@
 // Spacing ---------------------------------------------------------------------
 button,
 .button
-    margin-bottom: 1rem
+    margin: $spacing-button-margin
 input,
 textarea,
 select,
 fieldset
-    margin-bottom: 1.5rem
+    margin: $spacing-input-margin
 pre,
 blockquote,
 dl,
@@ -16,4 +16,4 @@ p,
 ul,
 ol,
 form
-    margin-bottom: 2.5rem
+    margin-bottom: $spacing-misc-margin
