--- a/sass/ui/tables/_tables.sass
+++ b/sass/ui/tables/_tables.sass
@@ -1,9 +1,9 @@
 // Tables ----------------------------------------------------------------------
 th,
 td
-    padding: 12px 15px
+    padding: $tables-td-padding
     text-align: left
-    border-bottom: 1px solid $code-border
+    border-bottom: $border-style $border-color
 th:first-child,
 td:first-child
     padding-left: 0
