--- a/sass/ui/typography/_typography.sass
+++ b/sass/ui/typography/_typography.sass
@@ -1,7 +1,6 @@
 // Typography ------------------------------------------------------------------
 h1, h2, h3, h4, h5, h6
-    margin-top: 0
-    margin-bottom: 2rem
+    margin: $font-margin-h
     font-weight: $font-weight-h
 h1
     font-size: $font-size-h1
