--- a/export/main.css
+++ b/export/main.css
@@ -990,7 +990,7 @@ p,
 ul,
 ol,
 form {
-  margin-bottom: 0 0 2.5rem 0;
+  margin: 0 0 2.5rem 0;
 }
 
 /* line 2, ../sass/ui/utilities/_utilities.sass */
@@ -1042,9 +1042,10 @@ hr {
   border-radius: 4px;
   padding: 3px 6px;
   margin-bottom: 1.5rem;
+  text-align: center;
 }
 
-/* line 10, ../sass/_removeme.sass */
+/* line 11, ../sass/_removeme.sass */
 strong h6 {
   font-weight: bold !important;
 }
