--- a/sass/ui/mq/_mq.sass
+++ b/sass/ui/mq/_mq.sass
@@ -5,16 +5,16 @@
 // buttons section and style it there.
 
 /* Larger than mobile */
-@media (min-width: 400px)
+@media (min-width: $bp-xxs)
 
 /* Larger than phablet (also point when grid becomes active) */
-@media (min-width: 550px)
+@media (min-width: $bp-xs)
 
 /* Larger than tablet */
-@media (min-width: 750px)
+@media (min-width: $bp-sm)
 
 /* Larger than desktop */
-@media (min-width: 1000px)
+@media (min-width: $bp-md)
 
 /* Larger than Desktop HD */
-@media (min-width: 1200px)
+@media (min-width: $bp-lg)
