--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -1,9 +1,8 @@
 // Grid ------------------------------------------------------------------------
 // Breakpoints
-$bp-xxs: 400px
-$bp-xs: 550px
-$bp-sm: 750px
-$bp-md: 1000px
+$bp-xs: 480px
+$bp-sm: 768px
+$bp-md: 960px
 $bp-lg: 1200px
 
 //gutters
@@ -95,6 +94,12 @@ $label-body-margin: 0 0 .5rem .5rem
 $spacing-button-margin: 0 0 1rem 0
 $spacing-input-margin: 0 0 1.5rem 0
 $spacing-misc-margin: 0 0 2.5rem 0
+
+$vspacing: 0 0 2*$gutter-width 0
+$xs-vspacing: 0 0 2*$gutter-width 0
+$sm-vspacing: 0 0 2*$gutter-width 0
+$md-vspacing: 0 0 2*$gutter-width 0
+$lg-vspacing: 0 0 2*$gutter-width 0
 
 // Misc ------------------------------------------------------------------------
 $border-radius: 4px
