--- a/sass/ui/grid/_grid.sass
+++ b/sass/ui/grid/_grid.sass
@@ -12,11 +12,11 @@
     float: left
     box-sizing: border-box
 
-// For devices larger than $bp-xxs
-@media (min-width: $bp-xxs)
-    .container
-        width: 85%
-        padding: 0
+// // For devices larger than $bp-xxs
+// @media (min-width: $bp-xxs)
+//     .container
+//         width: 85%
+//         padding: 0
 
 
 // For devices larger than $bp-xs
