--- a/sass/ui/mq/_mq.sass
+++ b/sass/ui/mq/_mq.sass
@@ -4,8 +4,8 @@
 // styles for buttons on small devices, paste the mobile query code up in the
 // buttons section and style it there.
 
-/* Larger than mobile */
-@media (min-width: $bp-xxs)
+// /* Larger than mobile */
+// @media (min-width: $bp-xxs)
 
 /* Larger than phablet (also point when grid becomes active) */
 @media (min-width: $bp-xs)
