added custom grid

--- a/sass/_removeme.sass
+++ b/sass/_removeme.sass
@@ -10,7 +10,8 @@
 strong
     h6
         font-weight: bold!important
-
+*
+    box-sizing: border-box
 // So what changed compared to the original Skeleton?
 //
 // Well, excluding the segmentation of HTML Elements and the addition of
