--- a/sass/ui/grid/_grid.sass
+++ b/sass/ui/grid/_grid.sass
@@ -5,108 +5,65 @@
     max-width: $bp-md
     margin: 0 auto
     padding: 0 $gutter-width
-    box-sizing: border-box
+
+.row
+    margin-right: -$gutter-width
+    margin-left: -$gutter-width
+
 .column,
-.columns
+.columns,
+[class^="col-"]
     width: 100%
     float: left
-    box-sizing: border-box
+    padding-left: $gutter-width
+    padding-right: $gutter-width
 
-// // For devices larger than $bp-xxs
-// @media (min-width: $bp-xxs)
-//     .container
-//         width: 85%
-//         padding: 0
+// Columns
+@for $i from $nb-columns through 1
+    .#{mini}-#{$i}
+        width: ($i/$nb-columns)*100%
 
-
-// For devices larger than $bp-xs
 @media (min-width: $bp-xs)
-    .container
-        width: 80%
-    .column,
-    .columns
-        margin-left: 4%
-    .column:first-child,
-    .columns:first-child
-        margin-left: 0
+    @for $i from $nb-columns through 1
+        .#{xs}-#{$i}
+            width: ($i/$nb-columns)*100%
 
-    .one.column,
-    .one.columns
-        width: 4.66666666667%
-    .two.columns
-        width: 13.3333333333%
-    .three.columns
-        width: 22%
-    .four.columns
-        width: 30.6666666667%
-    .five.columns
-        width: 39.3333333333%
-    .six.columns
-        width: 48%
-    .seven.columns
-        width: 56.6666666667%
-    .eight.columns
-        width: 65.3333333333%
-    .nine.columns
-        width: 74.0%
-    .ten.columns
-        width: 82.6666666667%
-    .eleven.columns
-        width: 91.3333333333%
-    .twelve.columns
-        width: 100%
-        margin-left: 0
+@media (min-width: $bp-sm)
+    @for $i from $nb-columns through 1
+        .#{sm}-#{$i}
+            width: ($i/$nb-columns)*100%
 
-    .one-third.column
-        width: 30.6666666667%
-    .two-thirds.column
-        width: 65.3333333333%
+@media (min-width: $bp-md)
+    @for $i from $nb-columns through 1
+        .#{md}-#{$i}
+            width: ($i/$nb-columns)*100%
 
-    .one-half.column
-        width: 48%
+@media (min-width: $bp-lg)
+    @for $i from $nb-columns through 1
+        .#{lg}-#{$i}
+            width: ($i/$nb-columns)*100%
 
-    /* Offsets */
-    .offset-by-one.column,
-    .offset-by-one.columns
-        margin-left: 8.66666666667%
-    .offset-by-two.column,
-    .offset-by-two.columns
-        margin-left: 17.3333333333%
-    .offset-by-three.column,
-    .offset-by-three.columns
-        margin-left: 26%
-    .offset-by-four.column,
-    .offset-by-four.columns
-        margin-left: 34.6666666667%
-    .offset-by-five.column,
-    .offset-by-five.columns
-        margin-left: 43.3333333333%
-    .offset-by-six.column,
-    .offset-by-six.columns
-        margin-left: 52%
-    .offset-by-seven.column,
-    .offset-by-seven.columns
-        margin-left: 60.6666666667%
-    .offset-by-eight.column,
-    .offset-by-eight.columns
-        margin-left: 69.3333333333%
-    .offset-by-nine.column,
-    .offset-by-nine.columns
-        margin-left: 78.0%
-    .offset-by-ten.column,
-    .offset-by-ten.columns
-        margin-left: 86.6666666667%
-    .offset-by-eleven.column,
-    .offset-by-eleven.columns
-        margin-left: 95.3333333333%
+// Offsets
+@for $i from $nb-columns through 0
+    .#{mini}-off-#{$i}
+        margin-left: ($i/$nb-columns)*100%
 
-    .offset-by-one-third.column,
-    .offset-by-one-third.columns
-        margin-left: 34.6666666667%
-    .offset-by-two-thirds.column,
-    .offset-by-two-thirds.columns
-        margin-left: 69.3333333333%
+@media (min-width: $bp-xs)
+    @for $i from $nb-columns through 0
+        .#{xs}-off-#{$i}
+            margin-left: ($i/$nb-columns)*100%
 
-    .offset-by-one-half.column,
-    .offset-by-one-half.columns
-        margin-left: 52%
+@media (min-width: $bp-sm)
+    @for $i from $nb-columns through 0
+        .#{sm}-off-#{$i}
+            margin-left: ($i/$nb-columns)*100%
+
+@media (min-width: $bp-md)
+    @for $i from $nb-columns through 0
+        .#{md}-off-#{$i}
+            margin-left: ($i/$nb-columns)*100%
+
+@media (min-width: $bp-lg)
+    @for $i from $nb-columns through 0
+        .#{lg}-off-#{$i}
+            margin-left: ($i/$nb-columns)*100%
