--- a/export/main.css
+++ b/export/main.css
@@ -444,195 +444,655 @@ th {
   max-width: 960px;
   margin: 0 auto;
   padding: 0 20px;
-  box-sizing: border-box;
 }
 
 /* line 9, ../sass/ui/grid/_grid.sass */
+.row {
+  margin-right: -20px;
+  margin-left: -20px;
+}
+
+/* line 13, ../sass/ui/grid/_grid.sass */
 .column,
-.columns {
+.columns,
+[class^="col-"] {
   width: 100%;
   float: left;
-  box-sizing: border-box;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+/* line 23, ../sass/ui/grid/_grid.sass */
+.mini-12 {
+  width: 100%;
+}
+
+/* line 23, ../sass/ui/grid/_grid.sass */
+.mini-11 {
+  width: 91.66667%;
+}
+
+/* line 23, ../sass/ui/grid/_grid.sass */
+.mini-10 {
+  width: 83.33333%;
+}
+
+/* line 23, ../sass/ui/grid/_grid.sass */
+.mini-9 {
+  width: 75%;
+}
+
+/* line 23, ../sass/ui/grid/_grid.sass */
+.mini-8 {
+  width: 66.66667%;
+}
+
+/* line 23, ../sass/ui/grid/_grid.sass */
+.mini-7 {
+  width: 58.33333%;
+}
+
+/* line 23, ../sass/ui/grid/_grid.sass */
+.mini-6 {
+  width: 50%;
+}
+
+/* line 23, ../sass/ui/grid/_grid.sass */
+.mini-5 {
+  width: 41.66667%;
+}
+
+/* line 23, ../sass/ui/grid/_grid.sass */
+.mini-4 {
+  width: 33.33333%;
+}
+
+/* line 23, ../sass/ui/grid/_grid.sass */
+.mini-3 {
+  width: 25%;
+}
+
+/* line 23, ../sass/ui/grid/_grid.sass */
+.mini-2 {
+  width: 16.66667%;
+}
+
+/* line 23, ../sass/ui/grid/_grid.sass */
+.mini-1 {
+  width: 8.33333%;
 }
 
 @media (min-width: 480px) {
-  /* line 24, ../sass/ui/grid/_grid.sass */
-  .container {
-    width: 80%;
+  /* line 28, ../sass/ui/grid/_grid.sass */
+  .xs-12 {
+    width: 100%;
   }
 
-  /* line 26, ../sass/ui/grid/_grid.sass */
-  .column,
-  .columns {
-    margin-left: 4%;
+  /* line 28, ../sass/ui/grid/_grid.sass */
+  .xs-11 {
+    width: 91.66667%;
   }
 
-  /* line 29, ../sass/ui/grid/_grid.sass */
-  .column:first-child,
-  .columns:first-child {
-    margin-left: 0;
+  /* line 28, ../sass/ui/grid/_grid.sass */
+  .xs-10 {
+    width: 83.33333%;
+  }
+
+  /* line 28, ../sass/ui/grid/_grid.sass */
+  .xs-9 {
+    width: 75%;
+  }
+
+  /* line 28, ../sass/ui/grid/_grid.sass */
+  .xs-8 {
+    width: 66.66667%;
+  }
+
+  /* line 28, ../sass/ui/grid/_grid.sass */
+  .xs-7 {
+    width: 58.33333%;
+  }
+
+  /* line 28, ../sass/ui/grid/_grid.sass */
+  .xs-6 {
+    width: 50%;
+  }
+
+  /* line 28, ../sass/ui/grid/_grid.sass */
+  .xs-5 {
+    width: 41.66667%;
+  }
+
+  /* line 28, ../sass/ui/grid/_grid.sass */
+  .xs-4 {
+    width: 33.33333%;
+  }
+
+  /* line 28, ../sass/ui/grid/_grid.sass */
+  .xs-3 {
+    width: 25%;
+  }
+
+  /* line 28, ../sass/ui/grid/_grid.sass */
+  .xs-2 {
+    width: 16.66667%;
+  }
+
+  /* line 28, ../sass/ui/grid/_grid.sass */
+  .xs-1 {
+    width: 8.33333%;
+  }
+}
+@media (min-width: 768px) {
+  /* line 33, ../sass/ui/grid/_grid.sass */
+  .sm-12 {
+    width: 100%;
   }
 
   /* line 33, ../sass/ui/grid/_grid.sass */
-  .one.column,
-  .one.columns {
-    width: 4.66667%;
+  .sm-11 {
+    width: 91.66667%;
   }
 
-  /* line 36, ../sass/ui/grid/_grid.sass */
-  .two.columns {
-    width: 13.33333%;
+  /* line 33, ../sass/ui/grid/_grid.sass */
+  .sm-10 {
+    width: 83.33333%;
+  }
+
+  /* line 33, ../sass/ui/grid/_grid.sass */
+  .sm-9 {
+    width: 75%;
+  }
+
+  /* line 33, ../sass/ui/grid/_grid.sass */
+  .sm-8 {
+    width: 66.66667%;
+  }
+
+  /* line 33, ../sass/ui/grid/_grid.sass */
+  .sm-7 {
+    width: 58.33333%;
+  }
+
+  /* line 33, ../sass/ui/grid/_grid.sass */
+  .sm-6 {
+    width: 50%;
+  }
+
+  /* line 33, ../sass/ui/grid/_grid.sass */
+  .sm-5 {
+    width: 41.66667%;
+  }
+
+  /* line 33, ../sass/ui/grid/_grid.sass */
+  .sm-4 {
+    width: 33.33333%;
+  }
+
+  /* line 33, ../sass/ui/grid/_grid.sass */
+  .sm-3 {
+    width: 25%;
+  }
+
+  /* line 33, ../sass/ui/grid/_grid.sass */
+  .sm-2 {
+    width: 16.66667%;
+  }
+
+  /* line 33, ../sass/ui/grid/_grid.sass */
+  .sm-1 {
+    width: 8.33333%;
+  }
+}
+@media (min-width: 960px) {
+  /* line 38, ../sass/ui/grid/_grid.sass */
+  .md-12 {
+    width: 100%;
   }
 
   /* line 38, ../sass/ui/grid/_grid.sass */
-  .three.columns {
-    width: 22%;
+  .md-11 {
+    width: 91.66667%;
   }
 
-  /* line 40, ../sass/ui/grid/_grid.sass */
-  .four.columns {
-    width: 30.66667%;
+  /* line 38, ../sass/ui/grid/_grid.sass */
+  .md-10 {
+    width: 83.33333%;
   }
 
-  /* line 42, ../sass/ui/grid/_grid.sass */
-  .five.columns {
-    width: 39.33333%;
+  /* line 38, ../sass/ui/grid/_grid.sass */
+  .md-9 {
+    width: 75%;
   }
 
-  /* line 44, ../sass/ui/grid/_grid.sass */
-  .six.columns {
-    width: 48%;
+  /* line 38, ../sass/ui/grid/_grid.sass */
+  .md-8 {
+    width: 66.66667%;
   }
 
-  /* line 46, ../sass/ui/grid/_grid.sass */
-  .seven.columns {
-    width: 56.66667%;
+  /* line 38, ../sass/ui/grid/_grid.sass */
+  .md-7 {
+    width: 58.33333%;
   }
 
-  /* line 48, ../sass/ui/grid/_grid.sass */
-  .eight.columns {
-    width: 65.33333%;
+  /* line 38, ../sass/ui/grid/_grid.sass */
+  .md-6 {
+    width: 50%;
   }
 
-  /* line 50, ../sass/ui/grid/_grid.sass */
-  .nine.columns {
-    width: 74%;
+  /* line 38, ../sass/ui/grid/_grid.sass */
+  .md-5 {
+    width: 41.66667%;
   }
 
-  /* line 52, ../sass/ui/grid/_grid.sass */
-  .ten.columns {
-    width: 82.66667%;
+  /* line 38, ../sass/ui/grid/_grid.sass */
+  .md-4 {
+    width: 33.33333%;
   }
 
-  /* line 54, ../sass/ui/grid/_grid.sass */
-  .eleven.columns {
-    width: 91.33333%;
+  /* line 38, ../sass/ui/grid/_grid.sass */
+  .md-3 {
+    width: 25%;
   }
 
-  /* line 56, ../sass/ui/grid/_grid.sass */
-  .twelve.columns {
+  /* line 38, ../sass/ui/grid/_grid.sass */
+  .md-2 {
+    width: 16.66667%;
+  }
+
+  /* line 38, ../sass/ui/grid/_grid.sass */
+  .md-1 {
+    width: 8.33333%;
+  }
+}
+@media (min-width: 1200px) {
+  /* line 43, ../sass/ui/grid/_grid.sass */
+  .lg-12 {
     width: 100%;
-    margin-left: 0;
   }
 
-  /* line 60, ../sass/ui/grid/_grid.sass */
-  .one-third.column {
-    width: 30.66667%;
+  /* line 43, ../sass/ui/grid/_grid.sass */
+  .lg-11 {
+    width: 91.66667%;
   }
 
-  /* line 62, ../sass/ui/grid/_grid.sass */
-  .two-thirds.column {
-    width: 65.33333%;
+  /* line 43, ../sass/ui/grid/_grid.sass */
+  .lg-10 {
+    width: 83.33333%;
   }
 
-  /* line 65, ../sass/ui/grid/_grid.sass */
-  .one-half.column {
-    width: 48%;
+  /* line 43, ../sass/ui/grid/_grid.sass */
+  .lg-9 {
+    width: 75%;
   }
 
-  /* Offsets */
-  /* line 69, ../sass/ui/grid/_grid.sass */
-  .offset-by-one.column,
-  .offset-by-one.columns {
-    margin-left: 8.66667%;
+  /* line 43, ../sass/ui/grid/_grid.sass */
+  .lg-8 {
+    width: 66.66667%;
   }
 
-  /* line 72, ../sass/ui/grid/_grid.sass */
-  .offset-by-two.column,
-  .offset-by-two.columns {
-    margin-left: 17.33333%;
+  /* line 43, ../sass/ui/grid/_grid.sass */
+  .lg-7 {
+    width: 58.33333%;
   }
 
-  /* line 75, ../sass/ui/grid/_grid.sass */
-  .offset-by-three.column,
-  .offset-by-three.columns {
-    margin-left: 26%;
+  /* line 43, ../sass/ui/grid/_grid.sass */
+  .lg-6 {
+    width: 50%;
   }
 
-  /* line 78, ../sass/ui/grid/_grid.sass */
-  .offset-by-four.column,
-  .offset-by-four.columns {
-    margin-left: 34.66667%;
+  /* line 43, ../sass/ui/grid/_grid.sass */
+  .lg-5 {
+    width: 41.66667%;
   }
 
-  /* line 81, ../sass/ui/grid/_grid.sass */
-  .offset-by-five.column,
-  .offset-by-five.columns {
-    margin-left: 43.33333%;
+  /* line 43, ../sass/ui/grid/_grid.sass */
+  .lg-4 {
+    width: 33.33333%;
   }
 
-  /* line 84, ../sass/ui/grid/_grid.sass */
-  .offset-by-six.column,
-  .offset-by-six.columns {
-    margin-left: 52%;
+  /* line 43, ../sass/ui/grid/_grid.sass */
+  .lg-3 {
+    width: 25%;
   }
 
-  /* line 87, ../sass/ui/grid/_grid.sass */
-  .offset-by-seven.column,
-  .offset-by-seven.columns {
-    margin-left: 60.66667%;
+  /* line 43, ../sass/ui/grid/_grid.sass */
+  .lg-2 {
+    width: 16.66667%;
   }
 
-  /* line 90, ../sass/ui/grid/_grid.sass */
-  .offset-by-eight.column,
-  .offset-by-eight.columns {
-    margin-left: 69.33333%;
+  /* line 43, ../sass/ui/grid/_grid.sass */
+  .lg-1 {
+    width: 8.33333%;
+  }
+}
+/* line 48, ../sass/ui/grid/_grid.sass */
+.mini-off-12 {
+  margin-left: 100%;
+}
+
+/* line 48, ../sass/ui/grid/_grid.sass */
+.mini-off-11 {
+  margin-left: 91.66667%;
+}
+
+/* line 48, ../sass/ui/grid/_grid.sass */
+.mini-off-10 {
+  margin-left: 83.33333%;
+}
+
+/* line 48, ../sass/ui/grid/_grid.sass */
+.mini-off-9 {
+  margin-left: 75%;
+}
+
+/* line 48, ../sass/ui/grid/_grid.sass */
+.mini-off-8 {
+  margin-left: 66.66667%;
+}
+
+/* line 48, ../sass/ui/grid/_grid.sass */
+.mini-off-7 {
+  margin-left: 58.33333%;
+}
+
+/* line 48, ../sass/ui/grid/_grid.sass */
+.mini-off-6 {
+  margin-left: 50%;
+}
+
+/* line 48, ../sass/ui/grid/_grid.sass */
+.mini-off-5 {
+  margin-left: 41.66667%;
+}
+
+/* line 48, ../sass/ui/grid/_grid.sass */
+.mini-off-4 {
+  margin-left: 33.33333%;
+}
+
+/* line 48, ../sass/ui/grid/_grid.sass */
+.mini-off-3 {
+  margin-left: 25%;
+}
+
+/* line 48, ../sass/ui/grid/_grid.sass */
+.mini-off-2 {
+  margin-left: 16.66667%;
+}
+
+/* line 48, ../sass/ui/grid/_grid.sass */
+.mini-off-1 {
+  margin-left: 8.33333%;
+}
+
+/* line 48, ../sass/ui/grid/_grid.sass */
+.mini-off-0 {
+  margin-left: 0%;
+}
+
+@media (min-width: 480px) {
+  /* line 53, ../sass/ui/grid/_grid.sass */
+  .xs-off-12 {
+    margin-left: 100%;
   }
 
-  /* line 93, ../sass/ui/grid/_grid.sass */
-  .offset-by-nine.column,
-  .offset-by-nine.columns {
-    margin-left: 78%;
+  /* line 53, ../sass/ui/grid/_grid.sass */
+  .xs-off-11 {
+    margin-left: 91.66667%;
   }
 
-  /* line 96, ../sass/ui/grid/_grid.sass */
-  .offset-by-ten.column,
-  .offset-by-ten.columns {
-    margin-left: 86.66667%;
+  /* line 53, ../sass/ui/grid/_grid.sass */
+  .xs-off-10 {
+    margin-left: 83.33333%;
   }
 
-  /* line 99, ../sass/ui/grid/_grid.sass */
-  .offset-by-eleven.column,
-  .offset-by-eleven.columns {
-    margin-left: 95.33333%;
+  /* line 53, ../sass/ui/grid/_grid.sass */
+  .xs-off-9 {
+    margin-left: 75%;
   }
 
-  /* line 103, ../sass/ui/grid/_grid.sass */
-  .offset-by-one-third.column,
-  .offset-by-one-third.columns {
-    margin-left: 34.66667%;
+  /* line 53, ../sass/ui/grid/_grid.sass */
+  .xs-off-8 {
+    margin-left: 66.66667%;
   }
 
-  /* line 106, ../sass/ui/grid/_grid.sass */
-  .offset-by-two-thirds.column,
-  .offset-by-two-thirds.columns {
-    margin-left: 69.33333%;
+  /* line 53, ../sass/ui/grid/_grid.sass */
+  .xs-off-7 {
+    margin-left: 58.33333%;
   }
 
-  /* line 110, ../sass/ui/grid/_grid.sass */
-  .offset-by-one-half.column,
-  .offset-by-one-half.columns {
-    margin-left: 52%;
+  /* line 53, ../sass/ui/grid/_grid.sass */
+  .xs-off-6 {
+    margin-left: 50%;
+  }
+
+  /* line 53, ../sass/ui/grid/_grid.sass */
+  .xs-off-5 {
+    margin-left: 41.66667%;
+  }
+
+  /* line 53, ../sass/ui/grid/_grid.sass */
+  .xs-off-4 {
+    margin-left: 33.33333%;
+  }
+
+  /* line 53, ../sass/ui/grid/_grid.sass */
+  .xs-off-3 {
+    margin-left: 25%;
+  }
+
+  /* line 53, ../sass/ui/grid/_grid.sass */
+  .xs-off-2 {
+    margin-left: 16.66667%;
+  }
+
+  /* line 53, ../sass/ui/grid/_grid.sass */
+  .xs-off-1 {
+    margin-left: 8.33333%;
+  }
+
+  /* line 53, ../sass/ui/grid/_grid.sass */
+  .xs-off-0 {
+    margin-left: 0%;
+  }
+}
+@media (min-width: 768px) {
+  /* line 58, ../sass/ui/grid/_grid.sass */
+  .sm-off-12 {
+    margin-left: 100%;
+  }
+
+  /* line 58, ../sass/ui/grid/_grid.sass */
+  .sm-off-11 {
+    margin-left: 91.66667%;
+  }
+
+  /* line 58, ../sass/ui/grid/_grid.sass */
+  .sm-off-10 {
+    margin-left: 83.33333%;
+  }
+
+  /* line 58, ../sass/ui/grid/_grid.sass */
+  .sm-off-9 {
+    margin-left: 75%;
+  }
+
+  /* line 58, ../sass/ui/grid/_grid.sass */
+  .sm-off-8 {
+    margin-left: 66.66667%;
+  }
+
+  /* line 58, ../sass/ui/grid/_grid.sass */
+  .sm-off-7 {
+    margin-left: 58.33333%;
+  }
+
+  /* line 58, ../sass/ui/grid/_grid.sass */
+  .sm-off-6 {
+    margin-left: 50%;
+  }
+
+  /* line 58, ../sass/ui/grid/_grid.sass */
+  .sm-off-5 {
+    margin-left: 41.66667%;
+  }
+
+  /* line 58, ../sass/ui/grid/_grid.sass */
+  .sm-off-4 {
+    margin-left: 33.33333%;
+  }
+
+  /* line 58, ../sass/ui/grid/_grid.sass */
+  .sm-off-3 {
+    margin-left: 25%;
+  }
+
+  /* line 58, ../sass/ui/grid/_grid.sass */
+  .sm-off-2 {
+    margin-left: 16.66667%;
+  }
+
+  /* line 58, ../sass/ui/grid/_grid.sass */
+  .sm-off-1 {
+    margin-left: 8.33333%;
+  }
+
+  /* line 58, ../sass/ui/grid/_grid.sass */
+  .sm-off-0 {
+    margin-left: 0%;
+  }
+}
+@media (min-width: 960px) {
+  /* line 63, ../sass/ui/grid/_grid.sass */
+  .md-off-12 {
+    margin-left: 100%;
+  }
+
+  /* line 63, ../sass/ui/grid/_grid.sass */
+  .md-off-11 {
+    margin-left: 91.66667%;
+  }
+
+  /* line 63, ../sass/ui/grid/_grid.sass */
+  .md-off-10 {
+    margin-left: 83.33333%;
+  }
+
+  /* line 63, ../sass/ui/grid/_grid.sass */
+  .md-off-9 {
+    margin-left: 75%;
+  }
+
+  /* line 63, ../sass/ui/grid/_grid.sass */
+  .md-off-8 {
+    margin-left: 66.66667%;
+  }
+
+  /* line 63, ../sass/ui/grid/_grid.sass */
+  .md-off-7 {
+    margin-left: 58.33333%;
+  }
+
+  /* line 63, ../sass/ui/grid/_grid.sass */
+  .md-off-6 {
+    margin-left: 50%;
+  }
+
+  /* line 63, ../sass/ui/grid/_grid.sass */
+  .md-off-5 {
+    margin-left: 41.66667%;
+  }
+
+  /* line 63, ../sass/ui/grid/_grid.sass */
+  .md-off-4 {
+    margin-left: 33.33333%;
+  }
+
+  /* line 63, ../sass/ui/grid/_grid.sass */
+  .md-off-3 {
+    margin-left: 25%;
+  }
+
+  /* line 63, ../sass/ui/grid/_grid.sass */
+  .md-off-2 {
+    margin-left: 16.66667%;
+  }
+
+  /* line 63, ../sass/ui/grid/_grid.sass */
+  .md-off-1 {
+    margin-left: 8.33333%;
+  }
+
+  /* line 63, ../sass/ui/grid/_grid.sass */
+  .md-off-0 {
+    margin-left: 0%;
+  }
+}
+@media (min-width: 1200px) {
+  /* line 68, ../sass/ui/grid/_grid.sass */
+  .lg-off-12 {
+    margin-left: 100%;
+  }
+
+  /* line 68, ../sass/ui/grid/_grid.sass */
+  .lg-off-11 {
+    margin-left: 91.66667%;
+  }
+
+  /* line 68, ../sass/ui/grid/_grid.sass */
+  .lg-off-10 {
+    margin-left: 83.33333%;
+  }
+
+  /* line 68, ../sass/ui/grid/_grid.sass */
+  .lg-off-9 {
+    margin-left: 75%;
+  }
+
+  /* line 68, ../sass/ui/grid/_grid.sass */
+  .lg-off-8 {
+    margin-left: 66.66667%;
+  }
+
+  /* line 68, ../sass/ui/grid/_grid.sass */
+  .lg-off-7 {
+    margin-left: 58.33333%;
+  }
+
+  /* line 68, ../sass/ui/grid/_grid.sass */
+  .lg-off-6 {
+    margin-left: 50%;
+  }
+
+  /* line 68, ../sass/ui/grid/_grid.sass */
+  .lg-off-5 {
+    margin-left: 41.66667%;
+  }
+
+  /* line 68, ../sass/ui/grid/_grid.sass */
+  .lg-off-4 {
+    margin-left: 33.33333%;
+  }
+
+  /* line 68, ../sass/ui/grid/_grid.sass */
+  .lg-off-3 {
+    margin-left: 25%;
+  }
+
+  /* line 68, ../sass/ui/grid/_grid.sass */
+  .lg-off-2 {
+    margin-left: 16.66667%;
+  }
+
+  /* line 68, ../sass/ui/grid/_grid.sass */
+  .lg-off-1 {
+    margin-left: 8.33333%;
+  }
+
+  /* line 68, ../sass/ui/grid/_grid.sass */
+  .lg-off-0 {
+    margin-left: 0%;
   }
 }
 /* line 4, ../sass/ui/base/_base.sass */
@@ -1089,4 +1549,9 @@ hr {
 /* line 11, ../sass/_removeme.sass */
 strong h6 {
   font-weight: bold !important;
+}
+
+/* line 13, ../sass/_removeme.sass */
+* {
+  box-sizing: border-box;
 }
