--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -8,6 +8,9 @@ $bp-lg: 1200px
 //gutters
 $gutter-width: 20px
 
+//columns
+$nb-columns: 12
+
 // Colors-----------------------------------------------------------------------
 $primary-color: #33C3F0
 $primary-color-hover: darken($primary-color, 10% )
