--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -98,11 +98,11 @@ $spacing-button-margin: 0 0 1rem 0
 $spacing-input-margin: 0 0 1.5rem 0
 $spacing-misc-margin: 0 0 2.5rem 0
 
-$vspacing: 0 0 2*$gutter-width 0
-$xs-vspacing: 0 0 2*$gutter-width 0
-$sm-vspacing: 0 0 2*$gutter-width 0
-$md-vspacing: 0 0 2*$gutter-width 0
-$lg-vspacing: 0 0 2*$gutter-width 0
+$vs: 0 0 2*$gutter-width 0
+$xs-vs: 0 0 2*$gutter-width 0
+$sm-vs: 0 0 2*$gutter-width 0
+$md-vs: 0 0 2*$gutter-width 0
+$lg-vs: 0 0 2*$gutter-width 0
 
 // Misc ------------------------------------------------------------------------
 $border-radius: 4px
