--- a/sass/ui/spacing/_spacing.sass
+++ b/sass/ui/spacing/_spacing.sass
@@ -18,27 +18,27 @@ ol,
 form
     margin: $spacing-misc-margin
 
-.vspacing
-    margin: $vspacing
+.vs
+    margin: $vs
 @media (min-width: $bp-xs)
-    .xs-vspacing
-        margin: $xs-vspacing
-    .xs-vspacing
+    .xs-vs
+        margin: $xs-vs
+    .xs-vs
         margin: 0
 @media (min-width: $bp-sm)
-    .sm-vspacing
-        margin: $sm-vspacing
-    .sm-novspacing
+    .sm-vs
+        margin: $sm-vs
+    .sm-novs
         margin: 0
 
 @media (min-width: $bp-md)
-    .md-vspacing
-        margin: $md-vspacing
-    .md-novspacing
+    .md-vs
+        margin: $md-vs
+    .md-novs
         margin: 0
 
 @media (min-width: $bp-xs)
-    .lg-vspacing
-        margin: $lg-vspacing
-    .lg-novspacing
+    .lg-vs
+        margin: $lg-vs
+    .lg-novs
         margin: 0
