--- a/export/main.css
+++ b/export/main.css
@@ -452,7 +452,9 @@ th {
   margin-left: -20px;
 }
 
-/* line 13, ../sass/ui/grid/_grid.sass */
+/* line 12, ../sass/ui/grid/_grid.sass */
+.col,
+.cols,
 .column,
 .columns,
 [class^="col-"] {
@@ -462,635 +464,635 @@ th {
   padding-right: 20px;
 }
 
-/* line 23, ../sass/ui/grid/_grid.sass */
+/* line 24, ../sass/ui/grid/_grid.sass */
 .mini-12 {
   width: 100%;
 }
 
-/* line 23, ../sass/ui/grid/_grid.sass */
+/* line 24, ../sass/ui/grid/_grid.sass */
 .mini-11 {
   width: 91.66667%;
 }
 
-/* line 23, ../sass/ui/grid/_grid.sass */
+/* line 24, ../sass/ui/grid/_grid.sass */
 .mini-10 {
   width: 83.33333%;
 }
 
-/* line 23, ../sass/ui/grid/_grid.sass */
+/* line 24, ../sass/ui/grid/_grid.sass */
 .mini-9 {
   width: 75%;
 }
 
-/* line 23, ../sass/ui/grid/_grid.sass */
+/* line 24, ../sass/ui/grid/_grid.sass */
 .mini-8 {
   width: 66.66667%;
 }
 
-/* line 23, ../sass/ui/grid/_grid.sass */
+/* line 24, ../sass/ui/grid/_grid.sass */
 .mini-7 {
   width: 58.33333%;
 }
 
-/* line 23, ../sass/ui/grid/_grid.sass */
+/* line 24, ../sass/ui/grid/_grid.sass */
 .mini-6 {
   width: 50%;
 }
 
-/* line 23, ../sass/ui/grid/_grid.sass */
+/* line 24, ../sass/ui/grid/_grid.sass */
 .mini-5 {
   width: 41.66667%;
 }
 
-/* line 23, ../sass/ui/grid/_grid.sass */
+/* line 24, ../sass/ui/grid/_grid.sass */
 .mini-4 {
   width: 33.33333%;
 }
 
-/* line 23, ../sass/ui/grid/_grid.sass */
+/* line 24, ../sass/ui/grid/_grid.sass */
 .mini-3 {
   width: 25%;
 }
 
-/* line 23, ../sass/ui/grid/_grid.sass */
+/* line 24, ../sass/ui/grid/_grid.sass */
 .mini-2 {
   width: 16.66667%;
 }
 
-/* line 23, ../sass/ui/grid/_grid.sass */
+/* line 24, ../sass/ui/grid/_grid.sass */
 .mini-1 {
   width: 8.33333%;
 }
 
 @media (min-width: 480px) {
-  /* line 28, ../sass/ui/grid/_grid.sass */
+  /* line 29, ../sass/ui/grid/_grid.sass */
   .xs-12 {
     width: 100%;
   }
 
-  /* line 28, ../sass/ui/grid/_grid.sass */
+  /* line 29, ../sass/ui/grid/_grid.sass */
   .xs-11 {
     width: 91.66667%;
   }
 
-  /* line 28, ../sass/ui/grid/_grid.sass */
+  /* line 29, ../sass/ui/grid/_grid.sass */
   .xs-10 {
     width: 83.33333%;
   }
 
-  /* line 28, ../sass/ui/grid/_grid.sass */
+  /* line 29, ../sass/ui/grid/_grid.sass */
   .xs-9 {
     width: 75%;
   }
 
-  /* line 28, ../sass/ui/grid/_grid.sass */
+  /* line 29, ../sass/ui/grid/_grid.sass */
   .xs-8 {
     width: 66.66667%;
   }
 
-  /* line 28, ../sass/ui/grid/_grid.sass */
+  /* line 29, ../sass/ui/grid/_grid.sass */
   .xs-7 {
     width: 58.33333%;
   }
 
-  /* line 28, ../sass/ui/grid/_grid.sass */
+  /* line 29, ../sass/ui/grid/_grid.sass */
   .xs-6 {
     width: 50%;
   }
 
-  /* line 28, ../sass/ui/grid/_grid.sass */
+  /* line 29, ../sass/ui/grid/_grid.sass */
   .xs-5 {
     width: 41.66667%;
   }
 
-  /* line 28, ../sass/ui/grid/_grid.sass */
+  /* line 29, ../sass/ui/grid/_grid.sass */
   .xs-4 {
     width: 33.33333%;
   }
 
-  /* line 28, ../sass/ui/grid/_grid.sass */
+  /* line 29, ../sass/ui/grid/_grid.sass */
   .xs-3 {
     width: 25%;
   }
 
-  /* line 28, ../sass/ui/grid/_grid.sass */
+  /* line 29, ../sass/ui/grid/_grid.sass */
   .xs-2 {
     width: 16.66667%;
   }
 
-  /* line 28, ../sass/ui/grid/_grid.sass */
+  /* line 29, ../sass/ui/grid/_grid.sass */
   .xs-1 {
     width: 8.33333%;
   }
 }
 @media (min-width: 768px) {
-  /* line 33, ../sass/ui/grid/_grid.sass */
+  /* line 34, ../sass/ui/grid/_grid.sass */
   .sm-12 {
     width: 100%;
   }
 
-  /* line 33, ../sass/ui/grid/_grid.sass */
+  /* line 34, ../sass/ui/grid/_grid.sass */
   .sm-11 {
     width: 91.66667%;
   }
 
-  /* line 33, ../sass/ui/grid/_grid.sass */
+  /* line 34, ../sass/ui/grid/_grid.sass */
   .sm-10 {
     width: 83.33333%;
   }
 
-  /* line 33, ../sass/ui/grid/_grid.sass */
+  /* line 34, ../sass/ui/grid/_grid.sass */
   .sm-9 {
     width: 75%;
   }
 
-  /* line 33, ../sass/ui/grid/_grid.sass */
+  /* line 34, ../sass/ui/grid/_grid.sass */
   .sm-8 {
     width: 66.66667%;
   }
 
-  /* line 33, ../sass/ui/grid/_grid.sass */
+  /* line 34, ../sass/ui/grid/_grid.sass */
   .sm-7 {
     width: 58.33333%;
   }
 
-  /* line 33, ../sass/ui/grid/_grid.sass */
+  /* line 34, ../sass/ui/grid/_grid.sass */
   .sm-6 {
     width: 50%;
   }
 
-  /* line 33, ../sass/ui/grid/_grid.sass */
+  /* line 34, ../sass/ui/grid/_grid.sass */
   .sm-5 {
     width: 41.66667%;
   }
 
-  /* line 33, ../sass/ui/grid/_grid.sass */
+  /* line 34, ../sass/ui/grid/_grid.sass */
   .sm-4 {
     width: 33.33333%;
   }
 
-  /* line 33, ../sass/ui/grid/_grid.sass */
+  /* line 34, ../sass/ui/grid/_grid.sass */
   .sm-3 {
     width: 25%;
   }
 
-  /* line 33, ../sass/ui/grid/_grid.sass */
+  /* line 34, ../sass/ui/grid/_grid.sass */
   .sm-2 {
     width: 16.66667%;
   }
 
-  /* line 33, ../sass/ui/grid/_grid.sass */
+  /* line 34, ../sass/ui/grid/_grid.sass */
   .sm-1 {
     width: 8.33333%;
   }
 }
 @media (min-width: 960px) {
-  /* line 38, ../sass/ui/grid/_grid.sass */
+  /* line 39, ../sass/ui/grid/_grid.sass */
   .md-12 {
     width: 100%;
   }
 
-  /* line 38, ../sass/ui/grid/_grid.sass */
+  /* line 39, ../sass/ui/grid/_grid.sass */
   .md-11 {
     width: 91.66667%;
   }
 
-  /* line 38, ../sass/ui/grid/_grid.sass */
+  /* line 39, ../sass/ui/grid/_grid.sass */
   .md-10 {
     width: 83.33333%;
   }
 
-  /* line 38, ../sass/ui/grid/_grid.sass */
+  /* line 39, ../sass/ui/grid/_grid.sass */
   .md-9 {
     width: 75%;
   }
 
-  /* line 38, ../sass/ui/grid/_grid.sass */
+  /* line 39, ../sass/ui/grid/_grid.sass */
   .md-8 {
     width: 66.66667%;
   }
 
-  /* line 38, ../sass/ui/grid/_grid.sass */
+  /* line 39, ../sass/ui/grid/_grid.sass */
   .md-7 {
     width: 58.33333%;
   }
 
-  /* line 38, ../sass/ui/grid/_grid.sass */
+  /* line 39, ../sass/ui/grid/_grid.sass */
   .md-6 {
     width: 50%;
   }
 
-  /* line 38, ../sass/ui/grid/_grid.sass */
+  /* line 39, ../sass/ui/grid/_grid.sass */
   .md-5 {
     width: 41.66667%;
   }
 
-  /* line 38, ../sass/ui/grid/_grid.sass */
+  /* line 39, ../sass/ui/grid/_grid.sass */
   .md-4 {
     width: 33.33333%;
   }
 
-  /* line 38, ../sass/ui/grid/_grid.sass */
+  /* line 39, ../sass/ui/grid/_grid.sass */
   .md-3 {
     width: 25%;
   }
 
-  /* line 38, ../sass/ui/grid/_grid.sass */
+  /* line 39, ../sass/ui/grid/_grid.sass */
   .md-2 {
     width: 16.66667%;
   }
 
-  /* line 38, ../sass/ui/grid/_grid.sass */
+  /* line 39, ../sass/ui/grid/_grid.sass */
   .md-1 {
     width: 8.33333%;
   }
 }
 @media (min-width: 1200px) {
-  /* line 43, ../sass/ui/grid/_grid.sass */
+  /* line 44, ../sass/ui/grid/_grid.sass */
   .lg-12 {
     width: 100%;
   }
 
-  /* line 43, ../sass/ui/grid/_grid.sass */
+  /* line 44, ../sass/ui/grid/_grid.sass */
   .lg-11 {
     width: 91.66667%;
   }
 
-  /* line 43, ../sass/ui/grid/_grid.sass */
+  /* line 44, ../sass/ui/grid/_grid.sass */
   .lg-10 {
     width: 83.33333%;
   }
 
-  /* line 43, ../sass/ui/grid/_grid.sass */
+  /* line 44, ../sass/ui/grid/_grid.sass */
   .lg-9 {
     width: 75%;
   }
 
-  /* line 43, ../sass/ui/grid/_grid.sass */
+  /* line 44, ../sass/ui/grid/_grid.sass */
   .lg-8 {
     width: 66.66667%;
   }
 
-  /* line 43, ../sass/ui/grid/_grid.sass */
+  /* line 44, ../sass/ui/grid/_grid.sass */
   .lg-7 {
     width: 58.33333%;
   }
 
-  /* line 43, ../sass/ui/grid/_grid.sass */
+  /* line 44, ../sass/ui/grid/_grid.sass */
   .lg-6 {
     width: 50%;
   }
 
-  /* line 43, ../sass/ui/grid/_grid.sass */
+  /* line 44, ../sass/ui/grid/_grid.sass */
   .lg-5 {
     width: 41.66667%;
   }
 
-  /* line 43, ../sass/ui/grid/_grid.sass */
+  /* line 44, ../sass/ui/grid/_grid.sass */
   .lg-4 {
     width: 33.33333%;
   }
 
-  /* line 43, ../sass/ui/grid/_grid.sass */
+  /* line 44, ../sass/ui/grid/_grid.sass */
   .lg-3 {
     width: 25%;
   }
 
-  /* line 43, ../sass/ui/grid/_grid.sass */
+  /* line 44, ../sass/ui/grid/_grid.sass */
   .lg-2 {
     width: 16.66667%;
   }
 
-  /* line 43, ../sass/ui/grid/_grid.sass */
+  /* line 44, ../sass/ui/grid/_grid.sass */
   .lg-1 {
     width: 8.33333%;
   }
 }
-/* line 48, ../sass/ui/grid/_grid.sass */
+/* line 49, ../sass/ui/grid/_grid.sass */
 .mini-off-12 {
   margin-left: 100%;
 }
 
-/* line 48, ../sass/ui/grid/_grid.sass */
+/* line 49, ../sass/ui/grid/_grid.sass */
 .mini-off-11 {
   margin-left: 91.66667%;
 }
 
-/* line 48, ../sass/ui/grid/_grid.sass */
+/* line 49, ../sass/ui/grid/_grid.sass */
 .mini-off-10 {
   margin-left: 83.33333%;
 }
 
-/* line 48, ../sass/ui/grid/_grid.sass */
+/* line 49, ../sass/ui/grid/_grid.sass */
 .mini-off-9 {
   margin-left: 75%;
 }
 
-/* line 48, ../sass/ui/grid/_grid.sass */
+/* line 49, ../sass/ui/grid/_grid.sass */
 .mini-off-8 {
   margin-left: 66.66667%;
 }
 
-/* line 48, ../sass/ui/grid/_grid.sass */
+/* line 49, ../sass/ui/grid/_grid.sass */
 .mini-off-7 {
   margin-left: 58.33333%;
 }
 
-/* line 48, ../sass/ui/grid/_grid.sass */
+/* line 49, ../sass/ui/grid/_grid.sass */
 .mini-off-6 {
   margin-left: 50%;
 }
 
-/* line 48, ../sass/ui/grid/_grid.sass */
+/* line 49, ../sass/ui/grid/_grid.sass */
 .mini-off-5 {
   margin-left: 41.66667%;
 }
 
-/* line 48, ../sass/ui/grid/_grid.sass */
+/* line 49, ../sass/ui/grid/_grid.sass */
 .mini-off-4 {
   margin-left: 33.33333%;
 }
 
-/* line 48, ../sass/ui/grid/_grid.sass */
+/* line 49, ../sass/ui/grid/_grid.sass */
 .mini-off-3 {
   margin-left: 25%;
 }
 
-/* line 48, ../sass/ui/grid/_grid.sass */
+/* line 49, ../sass/ui/grid/_grid.sass */
 .mini-off-2 {
   margin-left: 16.66667%;
 }
 
-/* line 48, ../sass/ui/grid/_grid.sass */
+/* line 49, ../sass/ui/grid/_grid.sass */
 .mini-off-1 {
   margin-left: 8.33333%;
 }
 
-/* line 48, ../sass/ui/grid/_grid.sass */
+/* line 49, ../sass/ui/grid/_grid.sass */
 .mini-off-0 {
   margin-left: 0%;
 }
 
 @media (min-width: 480px) {
-  /* line 53, ../sass/ui/grid/_grid.sass */
+  /* line 54, ../sass/ui/grid/_grid.sass */
   .xs-off-12 {
     margin-left: 100%;
   }
 
-  /* line 53, ../sass/ui/grid/_grid.sass */
+  /* line 54, ../sass/ui/grid/_grid.sass */
   .xs-off-11 {
     margin-left: 91.66667%;
   }
 
-  /* line 53, ../sass/ui/grid/_grid.sass */
+  /* line 54, ../sass/ui/grid/_grid.sass */
   .xs-off-10 {
     margin-left: 83.33333%;
   }
 
-  /* line 53, ../sass/ui/grid/_grid.sass */
+  /* line 54, ../sass/ui/grid/_grid.sass */
   .xs-off-9 {
     margin-left: 75%;
   }
 
-  /* line 53, ../sass/ui/grid/_grid.sass */
+  /* line 54, ../sass/ui/grid/_grid.sass */
   .xs-off-8 {
     margin-left: 66.66667%;
   }
 
-  /* line 53, ../sass/ui/grid/_grid.sass */
+  /* line 54, ../sass/ui/grid/_grid.sass */
   .xs-off-7 {
     margin-left: 58.33333%;
   }
 
-  /* line 53, ../sass/ui/grid/_grid.sass */
+  /* line 54, ../sass/ui/grid/_grid.sass */
   .xs-off-6 {
     margin-left: 50%;
   }
 
-  /* line 53, ../sass/ui/grid/_grid.sass */
+  /* line 54, ../sass/ui/grid/_grid.sass */
   .xs-off-5 {
     margin-left: 41.66667%;
   }
 
-  /* line 53, ../sass/ui/grid/_grid.sass */
+  /* line 54, ../sass/ui/grid/_grid.sass */
   .xs-off-4 {
     margin-left: 33.33333%;
   }
 
-  /* line 53, ../sass/ui/grid/_grid.sass */
+  /* line 54, ../sass/ui/grid/_grid.sass */
   .xs-off-3 {
     margin-left: 25%;
   }
 
-  /* line 53, ../sass/ui/grid/_grid.sass */
+  /* line 54, ../sass/ui/grid/_grid.sass */
   .xs-off-2 {
     margin-left: 16.66667%;
   }
 
-  /* line 53, ../sass/ui/grid/_grid.sass */
+  /* line 54, ../sass/ui/grid/_grid.sass */
   .xs-off-1 {
     margin-left: 8.33333%;
   }
 
-  /* line 53, ../sass/ui/grid/_grid.sass */
+  /* line 54, ../sass/ui/grid/_grid.sass */
   .xs-off-0 {
     margin-left: 0%;
   }
 }
 @media (min-width: 768px) {
-  /* line 58, ../sass/ui/grid/_grid.sass */
+  /* line 59, ../sass/ui/grid/_grid.sass */
   .sm-off-12 {
     margin-left: 100%;
   }
 
-  /* line 58, ../sass/ui/grid/_grid.sass */
+  /* line 59, ../sass/ui/grid/_grid.sass */
   .sm-off-11 {
     margin-left: 91.66667%;
   }
 
-  /* line 58, ../sass/ui/grid/_grid.sass */
+  /* line 59, ../sass/ui/grid/_grid.sass */
   .sm-off-10 {
     margin-left: 83.33333%;
   }
 
-  /* line 58, ../sass/ui/grid/_grid.sass */
+  /* line 59, ../sass/ui/grid/_grid.sass */
   .sm-off-9 {
     margin-left: 75%;
   }
 
-  /* line 58, ../sass/ui/grid/_grid.sass */
+  /* line 59, ../sass/ui/grid/_grid.sass */
   .sm-off-8 {
     margin-left: 66.66667%;
   }
 
-  /* line 58, ../sass/ui/grid/_grid.sass */
+  /* line 59, ../sass/ui/grid/_grid.sass */
   .sm-off-7 {
     margin-left: 58.33333%;
   }
 
-  /* line 58, ../sass/ui/grid/_grid.sass */
+  /* line 59, ../sass/ui/grid/_grid.sass */
   .sm-off-6 {
     margin-left: 50%;
   }
 
-  /* line 58, ../sass/ui/grid/_grid.sass */
+  /* line 59, ../sass/ui/grid/_grid.sass */
   .sm-off-5 {
     margin-left: 41.66667%;
   }
 
-  /* line 58, ../sass/ui/grid/_grid.sass */
+  /* line 59, ../sass/ui/grid/_grid.sass */
   .sm-off-4 {
     margin-left: 33.33333%;
   }
 
-  /* line 58, ../sass/ui/grid/_grid.sass */
+  /* line 59, ../sass/ui/grid/_grid.sass */
   .sm-off-3 {
     margin-left: 25%;
   }
 
-  /* line 58, ../sass/ui/grid/_grid.sass */
+  /* line 59, ../sass/ui/grid/_grid.sass */
   .sm-off-2 {
     margin-left: 16.66667%;
   }
 
-  /* line 58, ../sass/ui/grid/_grid.sass */
+  /* line 59, ../sass/ui/grid/_grid.sass */
   .sm-off-1 {
     margin-left: 8.33333%;
   }
 
-  /* line 58, ../sass/ui/grid/_grid.sass */
+  /* line 59, ../sass/ui/grid/_grid.sass */
   .sm-off-0 {
     margin-left: 0%;
   }
 }
 @media (min-width: 960px) {
-  /* line 63, ../sass/ui/grid/_grid.sass */
+  /* line 64, ../sass/ui/grid/_grid.sass */
   .md-off-12 {
     margin-left: 100%;
   }
 
-  /* line 63, ../sass/ui/grid/_grid.sass */
+  /* line 64, ../sass/ui/grid/_grid.sass */
   .md-off-11 {
     margin-left: 91.66667%;
   }
 
-  /* line 63, ../sass/ui/grid/_grid.sass */
+  /* line 64, ../sass/ui/grid/_grid.sass */
   .md-off-10 {
     margin-left: 83.33333%;
   }
 
-  /* line 63, ../sass/ui/grid/_grid.sass */
+  /* line 64, ../sass/ui/grid/_grid.sass */
   .md-off-9 {
     margin-left: 75%;
   }
 
-  /* line 63, ../sass/ui/grid/_grid.sass */
+  /* line 64, ../sass/ui/grid/_grid.sass */
   .md-off-8 {
     margin-left: 66.66667%;
   }
 
-  /* line 63, ../sass/ui/grid/_grid.sass */
+  /* line 64, ../sass/ui/grid/_grid.sass */
   .md-off-7 {
     margin-left: 58.33333%;
   }
 
-  /* line 63, ../sass/ui/grid/_grid.sass */
+  /* line 64, ../sass/ui/grid/_grid.sass */
   .md-off-6 {
     margin-left: 50%;
   }
 
-  /* line 63, ../sass/ui/grid/_grid.sass */
+  /* line 64, ../sass/ui/grid/_grid.sass */
   .md-off-5 {
     margin-left: 41.66667%;
   }
 
-  /* line 63, ../sass/ui/grid/_grid.sass */
+  /* line 64, ../sass/ui/grid/_grid.sass */
   .md-off-4 {
     margin-left: 33.33333%;
   }
 
-  /* line 63, ../sass/ui/grid/_grid.sass */
+  /* line 64, ../sass/ui/grid/_grid.sass */
   .md-off-3 {
     margin-left: 25%;
   }
 
-  /* line 63, ../sass/ui/grid/_grid.sass */
+  /* line 64, ../sass/ui/grid/_grid.sass */
   .md-off-2 {
     margin-left: 16.66667%;
   }
 
-  /* line 63, ../sass/ui/grid/_grid.sass */
+  /* line 64, ../sass/ui/grid/_grid.sass */
   .md-off-1 {
     margin-left: 8.33333%;
   }
 
-  /* line 63, ../sass/ui/grid/_grid.sass */
+  /* line 64, ../sass/ui/grid/_grid.sass */
   .md-off-0 {
     margin-left: 0%;
   }
 }
 @media (min-width: 1200px) {
-  /* line 68, ../sass/ui/grid/_grid.sass */
+  /* line 69, ../sass/ui/grid/_grid.sass */
   .lg-off-12 {
     margin-left: 100%;
   }
 
-  /* line 68, ../sass/ui/grid/_grid.sass */
+  /* line 69, ../sass/ui/grid/_grid.sass */
   .lg-off-11 {
     margin-left: 91.66667%;
   }
 
-  /* line 68, ../sass/ui/grid/_grid.sass */
+  /* line 69, ../sass/ui/grid/_grid.sass */
   .lg-off-10 {
     margin-left: 83.33333%;
   }
 
-  /* line 68, ../sass/ui/grid/_grid.sass */
+  /* line 69, ../sass/ui/grid/_grid.sass */
   .lg-off-9 {
     margin-left: 75%;
   }
 
-  /* line 68, ../sass/ui/grid/_grid.sass */
+  /* line 69, ../sass/ui/grid/_grid.sass */
   .lg-off-8 {
     margin-left: 66.66667%;
   }
 
-  /* line 68, ../sass/ui/grid/_grid.sass */
+  /* line 69, ../sass/ui/grid/_grid.sass */
   .lg-off-7 {
     margin-left: 58.33333%;
   }
 
-  /* line 68, ../sass/ui/grid/_grid.sass */
+  /* line 69, ../sass/ui/grid/_grid.sass */
   .lg-off-6 {
     margin-left: 50%;
   }
 
-  /* line 68, ../sass/ui/grid/_grid.sass */
+  /* line 69, ../sass/ui/grid/_grid.sass */
   .lg-off-5 {
     margin-left: 41.66667%;
   }
 
-  /* line 68, ../sass/ui/grid/_grid.sass */
+  /* line 69, ../sass/ui/grid/_grid.sass */
   .lg-off-4 {
     margin-left: 33.33333%;
   }
 
-  /* line 68, ../sass/ui/grid/_grid.sass */
+  /* line 69, ../sass/ui/grid/_grid.sass */
   .lg-off-3 {
     margin-left: 25%;
   }
 
-  /* line 68, ../sass/ui/grid/_grid.sass */
+  /* line 69, ../sass/ui/grid/_grid.sass */
   .lg-off-2 {
     margin-left: 16.66667%;
   }
 
-  /* line 68, ../sass/ui/grid/_grid.sass */
+  /* line 69, ../sass/ui/grid/_grid.sass */
   .lg-off-1 {
     margin-left: 8.33333%;
   }
 
-  /* line 68, ../sass/ui/grid/_grid.sass */
+  /* line 69, ../sass/ui/grid/_grid.sass */
   .lg-off-0 {
     margin-left: 0%;
   }
@@ -1447,51 +1449,51 @@ form {
 }
 
 /* line 21, ../sass/ui/spacing/_spacing.sass */
-.vspacing {
+.vs {
   margin: 0 0 40px 0;
 }
 
 @media (min-width: 480px) {
   /* line 24, ../sass/ui/spacing/_spacing.sass */
-  .xs-vspacing {
+  .xs-vs {
     margin: 0 0 40px 0;
   }
 
   /* line 26, ../sass/ui/spacing/_spacing.sass */
-  .xs-vspacing {
+  .xs-vs {
     margin: 0;
   }
 }
 @media (min-width: 768px) {
   /* line 29, ../sass/ui/spacing/_spacing.sass */
-  .sm-vspacing {
+  .sm-vs {
     margin: 0 0 40px 0;
   }
 
   /* line 31, ../sass/ui/spacing/_spacing.sass */
-  .sm-novspacing {
+  .sm-novs {
     margin: 0;
   }
 }
 @media (min-width: 960px) {
   /* line 35, ../sass/ui/spacing/_spacing.sass */
-  .md-vspacing {
+  .md-vs {
     margin: 0 0 40px 0;
   }
 
   /* line 37, ../sass/ui/spacing/_spacing.sass */
-  .md-novspacing {
+  .md-novs {
     margin: 0;
   }
 }
 @media (min-width: 480px) {
   /* line 41, ../sass/ui/spacing/_spacing.sass */
-  .lg-vspacing {
+  .lg-vs {
     margin: 0 0 40px 0;
   }
 
   /* line 43, ../sass/ui/spacing/_spacing.sass */
-  .lg-novspacing {
+  .lg-novs {
     margin: 0;
   }
 }
