Less Folders // More readable variables

--- a/sass/ui/_buttons.sass
+++ b/sass/ui/_buttons.sass
@@ -1,3 +1,10 @@
+// Variables -------------------------------------------------------------------
+$button-height: 38px
+$button-padding: 0 30px
+$button-font-size: 1.1rem
+$button-font-weight: 600
+$button-letter-spacing: 0.1rem
+
 // Buttons ---------------------------------------------------------------------
 .button,
 button,
