--- a/sass/ui/_code.sass
+++ b/sass/ui/_code.sass
@@ -1,3 +1,9 @@
+// Variables -------------------------------------------------------------------
+$code-padding: .2rem .5rem
+$code-margin: 0 .2rem
+$code-font-size: 90%
+$pre-code-padding: 1rem 1.5rem
+
 // Code ------------------------------------------------------------------------
 code
     padding: $code-padding
