--- a/sass/ui/_links.sass
+++ b/sass/ui/_links.sass
@@ -1,3 +1,5 @@
+// Variables -------------------------------------------------------------------
+
 // Links -----------------------------------------------------------------------
 a
     color: $primary-color
