--- a/sass/ui/_lists.sass
+++ b/sass/ui/_lists.sass
@@ -1,3 +1,9 @@
+// Variables--------------------------------------------------------------------
+$li-margin: 0 0 1rem 0
+$nested-list-margin: 1.5rem 0 1.5rem 3rem
+$nested-list-font-size: 90%
+
+
 // Lists -----------------------------------------------------------------------
 ul
     list-style: circle inside
