--- a/sass/ui/_spacing.sass
+++ b/sass/ui/_spacing.sass
@@ -1,3 +1,8 @@
+// Variables--------------------------------------------------------------------
+$spacing-button-margin: 0 0 1rem 0
+$spacing-input-margin: 0 0 1.5rem 0
+$spacing-misc-margin: 0 0 2.5rem 0
+
 // Spacing ---------------------------------------------------------------------
 button,
 .button
