--- a/sass/ui/_utilities.sass
+++ b/sass/ui/_utilities.sass
@@ -1,3 +1,5 @@
+// Variables--------------------------------------------------------------------
+
 // Utilities -------------------------------------------------------------------
 .u-full-width
     width: 100%
