--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -1,14 +1,3 @@
-// Grid ------------------------------------------------------------------------
-// Breakpoints
-$bp-xxs: 400px
-$bp-xs: 550px
-$bp-sm: 750px
-$bp-md: 1000px
-$bp-lg: 1200px
-
-//gutters
-$gutter-width: 20px
-
 // Colors-----------------------------------------------------------------------
 $primary-color: #33C3F0
 $primary-color-hover: darken($primary-color, 10% )
@@ -19,85 +8,6 @@ $border-color: #E1E1E1
 $border-color-hover: darken($border-color, 10%)
 $background-color: #F1F1F1
 
-// Typography ------------------------------------------------------------------
-@import "https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900"
-
-$font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif
-
-$font-size: 1.5em
-$line-height: 1.6
-$font-weight: 400
-
-$font-margin-h: 0 0 2rem 0
-$font-weight-h: 300
-
-$font-size-h1: 4.0rem
-$font-size-h2: 3.6rem
-$font-size-h3: 3.0rem
-$font-size-h4: 2.4rem
-$font-size-h5: 1.8rem
-$font-size-h6: 1.5rem
-
-$line-height-h1: 1.2
-$line-height-h2: 1.25
-$line-height-h3: 1.3
-$line-height-h4: 1.35
-$line-height-h5: 1.5
-$line-height-h6: 1.6
-
-$letter-spacing-h1: -.1rem
-$letter-spacing-h2: -.1rem
-$letter-spacing-h3: -.1rem
-$letter-spacing-h4: -.08rem
-$letter-spacing-h5: -.05rem
-$letter-spacing-h6: 0
-
-// For devices larger than $bp-xs
-$enable-min-xs-h: true // Enables following h font-sizes for (min-width: $bp-xs)
-
-$min-xs-h1: 5.0rem
-$min-xs-h2: 4.2rem
-$min-xs-h3: 3.6rem
-$min-xs-h4: 3.0rem
-$min-xs-h5: 2.4rem
-$min-xs-h6: 1.5rem
-
-// Lists -----------------------------------------------------------------------
-$li-margin: 0 0 1rem 0
-$nested-list-margin: 1.5rem 0 1.5rem 3rem
-$nested-list-font-size: 90%
-
-// Buttons ---------------------------------------------------------------------
-$button-height: 38px
-$button-padding: 0 30px
-$button-font-size: 1.1rem
-$button-font-weight: 600
-$button-letter-spacing: 0.1rem
-
-// Tables ----------------------------------------------------------------------
-$tables-td-padding: 12px 15px
-
-// Code ------------------------------------------------------------------------
-$code-padding: .2rem .5rem
-$code-margin: 0 .2rem
-$code-font-size: 90%
-$pre-code-padding: 1rem 1.5rem
-
-// Form ------------------------------------------------------------------------
-$form-height: 38px
-$form-padding: 6px 10px
-$textarea-height: 65px
-$legend-label-margin: 0 0 .5rem 0
-$legend-label-font-weight: 600
-$label-body-margin: 0 0 .5rem .5rem
-
-// Spacing ---------------------------------------------------------------------
-$spacing-button-margin: 0 0 1rem 0
-$spacing-input-margin: 0 0 1.5rem 0
-$spacing-misc-margin: 0 0 2.5rem 0
-
-// Misc ------------------------------------------------------------------------
+// Other -----------------------------------------------------------------------
 $border-radius: 4px
 $border-style: 1px solid
-
-$hr-margin: 3rem 0 3.5rem 0
