--- a/sass/ui/_clearing.sass
+++ b/sass/ui/_clearing.sass
@@ -1,3 +1,5 @@
+// Variables -------------------------------------------------------------------
+
 // Clearing --------------------------------------------------------------------
 
 // Self Clearing Goodness
