--- a/sass/ui/_forms.sass
+++ b/sass/ui/_forms.sass
@@ -1,3 +1,11 @@
+// Variables -------------------------------------------------------------------
+$form-height: 38px
+$form-padding: 6px 10px
+$textarea-height: 65px
+$legend-label-margin: 0 0 .5rem 0
+$legend-label-font-weight: 600
+$label-body-margin: 0 0 .5rem .5rem
+
 // Forms -----------------------------------------------------------------------
 input[type="email"],
 input[type="number"],
