--- a/sass/ui/_grid.sass
+++ b/sass/ui/_grid.sass
@@ -1,10 +1,21 @@
+// Variables -------------------------------------------------------------------
+// Breakpoints
+$xxs: 400px
+$xs: 550px
+$sm: 750px
+$md: 1000px
+$lg: 1200px
+
+//gutters
+$gutter: 20px
+
 // Grid ------------------------------------------------------------------------
 .container
     position: relative
     width: 100%
-    max-width: $bp-md
+    max-width: $md
     margin: 0 auto
-    padding: 0 $gutter-width
+    padding: 0 $gutter
     box-sizing: border-box
 .column,
 .columns
@@ -13,14 +24,14 @@
     box-sizing: border-box
 
 // For devices larger than $bp-xxs
-@media (min-width: $bp-xxs)
+@media (min-width: $xxs)
     .container
         width: 85%
         padding: 0
 
 
 // For devices larger than $bp-xs
-@media (min-width: $bp-xs)
+@media (min-width: $xs)
     .container
         width: 80%
     .column,
