--- a/sass/ui/_misc.sass
+++ b/sass/ui/_misc.sass
@@ -1,3 +1,6 @@
+// Variables--------------------------------------------------------------------
+$hr-margin: 3rem 0 3.5rem 0
+
 // Misc ------------------------------------------------------------------------
 hr
     margin: $hr-margin
