--- a/sass/ui/_mq.sass
+++ b/sass/ui/_mq.sass
@@ -1,3 +1,5 @@
+// Variables--------------------------------------------------------------------
+
 // Media Queries ---------------------------------------------------------------
 // NOTE: The best way to structure the use of media queries is to create the
 // queries near the relevant code. For example, if you wanted to change the
@@ -5,16 +7,16 @@
 // buttons section and style it there.
 
 /* Larger than mobile */
-@media (min-width: $bp-xxs)
+@media (min-width: $xxs)
 
 /* Larger than phablet (also point when grid becomes active) */
-@media (min-width: $bp-xs)
+@media (min-width: $xs)
 
 /* Larger than tablet */
-@media (min-width: $bp-sm)
+@media (min-width: $sm)
 
 /* Larger than desktop */
-@media (min-width: $bp-md)
+@media (min-width: $md)
 
 /* Larger than Desktop HD */
-@media (min-width: $bp-lg)
+@media (min-width: $lg)
