--- a/sass/ui/_tables.sass
+++ b/sass/ui/_tables.sass
@@ -1,3 +1,6 @@
+// Variables--------------------------------------------------------------------
+$tables-td-padding: 12px 15px
+
 // Tables ----------------------------------------------------------------------
 th,
 td
