--- a/sass/ui/_typography.sass
+++ b/sass/ui/_typography.sass
@@ -1,3 +1,46 @@
+// Variables--------------------------------------------------------------------
+@import "https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900"
+
+$font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif
+
+$font-size: 1.5em
+$line-height: 1.6
+$font-weight: 400
+
+$font-margin-h: 0 0 2rem 0
+$font-weight-h: 300
+
+$font-size-h1: 4.0rem
+$font-size-h2: 3.6rem
+$font-size-h3: 3.0rem
+$font-size-h4: 2.4rem
+$font-size-h5: 1.8rem
+$font-size-h6: 1.5rem
+
+$line-height-h1: 1.2
+$line-height-h2: 1.25
+$line-height-h3: 1.3
+$line-height-h4: 1.35
+$line-height-h5: 1.5
+$line-height-h6: 1.6
+
+$letter-spacing-h1: -.1rem
+$letter-spacing-h2: -.1rem
+$letter-spacing-h3: -.1rem
+$letter-spacing-h4: -.08rem
+$letter-spacing-h5: -.05rem
+$letter-spacing-h6: 0
+
+// For devices larger than $bp-xs
+$enable-min-xs-h: true // Enables following h font-sizes for (min-width: $bp-xs)
+
+$min-xs-h1: 5.0rem
+$min-xs-h2: 4.2rem
+$min-xs-h3: 3.6rem
+$min-xs-h4: 3.0rem
+$min-xs-h5: 2.4rem
+$min-xs-h6: 1.5rem
+
 // Typography ------------------------------------------------------------------
 h1, h2, h3, h4, h5, h6
     margin: $font-margin-h
@@ -29,7 +72,7 @@ h6
 
 /* Larger than phablet */
 @if $enable-min-xs-h == true
-    @media (min-width: $bp-xs)
+    @media (min-width: $xs)
         h1
             font-size: $min-xs-h1
         h2
